# Stellar-GreenPay

./: CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  task.md
.github/workflows/: backend.yml  ci.yml  extension.yml  frontend.yml
backend/: .env.example  .eslintrc.json  eslint.config.mts  package-lock.json  package.json
backend/src/: server.js
contracts/: Cargo.toml  EVENTS.md
contracts/escrow-contract/: Cargo.toml
contracts/escrow-contract/src/: lib.rs
contracts/greenpay-contract/: Cargo.toml  SECURITY.md
docs/: DEPLOYMENT.md  extension-build-process.md  openapi.yml
docs/adr/: ADR-004-cei-pattern.md
docs/api/: openapi.yaml
docs/backend/: index.html
extension/: manifest.firefox.json  manifest.json  package-lock.json  package.json  popup.css  popup.html  settings.html
extension/src/: background.ts  content-script.ts  popup.ts  settings.ts
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/components/: DescriptionAccordion.tsx  DonateForm.tsx  DonationFeed.tsx  DonationTicker.tsx  ImpactCertificate.tsx  LanguageSwitcher.tsx  LeaderboardTable.tsx  MonthlyGivingSetup.tsx  Navbar.tsx  ProjectCard.tsx  ProjectComparison.tsx  ProjectMapMarker.tsx  ProjectRating.tsx  ToastNotification.tsx  WalletAddressQRCode.tsx  WalletConnect.tsx
frontend/e2e/: greenpay.spec.ts
frontend/lib/: api.ts  monthlyGiving.ts  stellar.ts  theme.tsx
frontend/locales/: en.json  es.json
mobile/: .env.example  README.md  app.json  package-lock.json  package.json
(+128 files in other folders)
